--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -144,7 +144,7 @@
                       ></textarea>
                       <div class="wrapper">
                         <button
-                          class="btn-grad w-100 text-uppercase"
+                          class="btn-grad mt-6 w-100 text-uppercase"
                           type="submit"
                           name="button"
                         >
@@ -194,17 +194,6 @@
                               href="mailto:abcdefg@gmail.com"
                               >motraveler@gmail.com</a
                             >
-                          </p>
-                        </div>
-                      </div>
-                      <div class="contact-item media">
-                        <i
-                          class="fa fa-clock media-left media-right-margin"
-                        ></i>
-                        <div class="media-body">
-                          <p class="text-uppercase">Working Hours</p>
-                          <p class="text-uppercase">
-                            Mon-Fri 9.00 AM to 5.00PM.
                           </p>
                         </div>
                       </div>
