--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -152,9 +152,9 @@
                   you want to stick to a budget. Here are some ways to cut your
                   costs when visiting Prague.
                 </p>
-                <h2 class="fw-bolder mb-4 mt-5">Highlights of Prague</h2>
+                <h2 class="fw-bolder mb-5 mt-5">Highlights of Prague</h2>
                 <img
-                class="img-fluid rounded pb-4"
+                class="img-fluid rounded pb-4 mx-auto d-block"
                 src="../Assets/Media/pexels-jeffrey-czum-2346216.webp"
                 alt="Prague"/>
                 <p class="fs-5 mb-4">
@@ -208,7 +208,7 @@
                     aria-describedby="button-search"
                   />
                   <button
-                    class="btn btn-primary"
+                    class="btn btn-primary mb-3"
                     id="button-search"
                     type="button"
                   >
@@ -224,16 +224,16 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <ul class="list-unstyled mb-0">
-                      <li><a href="#!">Europe</a></li>
-                      <li><a href="#!">Africa</a></li>
-                      <li><a href="#!">America</a></li>
+                      <li><a href="#!" style="pointer-events: none">Europe</a></li>
+                      <li><a href="#!" style="pointer-events: none">Africa</a></li>
+                      <li><a href="#!" style="pointer-events: none">America</a></li>
                     </ul>
                   </div>
                   <div class="col-sm-6">
                     <ul class="list-unstyled mb-0">
-                      <li><a href="#!">Traval</a></li>
-                      <li><a href="#!">Food</a></li>
-                      <li><a href="#!">Work</a></li>
+                      <li><a href="#!" style="pointer-events: none">Traval</a></li>
+                      <li><a href="#!" style="pointer-events: none">Food</a></li>
+                      <li><a href="#!" style="pointer-events: none">Work</a></li>
                     </ul>
                   </div>
                 </div>
@@ -244,7 +244,7 @@
               <div class="card-header">Daily Photo</div>
               <div class="card-body">
                 <img
-                  class="img-fluid rounded"
+                  class="img-fluid rounded mx-auto d-block"
                   src="../Assets/Media/pexels-son-tung-tran-6478474.webp"
                   alt="Prague boat"
                 />
