--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
       <!-------About End------->
       <section
         class="about section-padding prelative about-section1"
-        id="about"
-      >
+        id="about">
         <div>
           <div class="sectioner-header text-center">
             <h2 ><a href="./Pages/About.html">About Me</a></h2>
