index in progrss

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -100,7 +100,7 @@
                 <h2>Ask Me Anything!</h2>
                 <span class="line"></span>
                 <p>
-                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to motravel@email.com
+                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to motrav@email.com
                 </p>
               </div>
               <div class="section-content">
@@ -191,8 +191,8 @@
                           <p class="text-uppercase">
                             <a
                               class="text-white"
-                              href="mailto:abcdefg@gmail.com"
-                              >motraveler@gmail.com</a
+                              href="mailto:motrav@gmail.com"
+                              >motrav@gmail.com</a
                             >
                           </p>
                         </div>
