--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   </head>
   <body>
     <header>
-      <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-lg">
+      <!--BS Navbar Start will collapse below 1051-->
+      <nav class="navbar navbar-expand-xl fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
@@ -317,7 +317,7 @@
                 <h2><a href="./Pages/contact.html">Ask Me Anything!</a></h2>
                 <span class="line"></span>
                 <p>
-                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to <span><a href="mailto:motraveler@gmail.com" data-action="email">motraveler@email.com</a></span>
+                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to <span><a href="mailto:motrav@gmail.com" data-action="email">motrav@email.com</a></span>
                 </p>
               </div>
               <div class="section-content">
@@ -408,20 +408,9 @@
                           <p class="text-uppercase">
                             <a
                               class="text-white"
-                              href="mailto:abcdefg@gmail.com"
-                              >motraveler@email.com</a
+                              href="mailto:motrav@gmail.com"
+                              >motrav@email.com</a
                             >
-                          </p>
-                        </div>
-                      </div>
-                      <div class="contact-item media">
-                        <i
-                          class="fa fa-clock media-left media-right-margin"
-                        ></i>
-                        <div class="media-body">
-                          <p class="text-uppercase">Working Hours</p>
-                          <p class="text-uppercase">
-                            Mon-Fri 9.00 AM to 5.00PM.
                           </p>
                         </div>
                       </div>
