--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -45,7 +45,7 @@
   <body>
     <header>
       <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-xl fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img
