--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -221,20 +221,20 @@
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a
+            <a aria-label="Instagram"
               class="text-body-secondary"
               href="https://www.instagram.com/mercymolano?utm_source=qr"
               target="_blank"
             >
               <i class="fa-brands fa-instagram fa-beat"></i
             ></a>
-            <a
+            <a aria-label="Whatsapp"
               class="text-body-secondary"
               href="https://wa.link/ycoea4"
               target="_blank"
               ><i class="fa-brands fa-whatsapp fa-beat"></i
             ></a>
-            <a
+            <a aria-label="linkedin"
               class="text-body-secondary"
               href="https://co.linkedin.com/in/mercymoreno"
               target="_blank"
