--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
               <div class="col-md-8 col-sm-12 banner-content">
                 <h2 class="banner-title">Hi! I'm Mo the Traveler</h2>
                 <p class="banner-text">
-                  Meet Mo, your friendly globetrotting companion, and join her on an exciting journey around the world. Mo is not just any traveler; she's a storyteller, adventurer, and explorer rolled into one. In this captivating adventure, Mo will take you on a voyage filled with intriguing tales, breathtaking landscapes, and cultural encounters that will leave you inspired and yearning for your own adventures.
+                  Meet Mo, your friendly globetrotting companion, and join her
+                  on an exciting journey around the world. Mo is not just any
+                  traveler; she's a storyteller, adventurer, and explorer rolled
+                  into one. In this captivating adventure, Mo will take you on a
+                  voyage filled with intriguing tales, breathtaking landscapes,
+                  and cultural encounters that will leave you inspired and
+                  yearning for your own adventures.
                 </p>
                 <a href="./Pages/About.html">MY STORY</a>
               </div>
@@ -109,17 +115,18 @@
           </div>
         </div>
         <span class="svg-wave">
-          <img class="svg-hero" src="./Assets/Media/wave.svg" alt="wave"/>
+          <img class="svg-hero" src="./Assets/Media/wave.svg" alt="wave" />
         </span>
       </section>
       <!-------Banner End------->
       <!-------About End------->
       <section
         class="about section-padding prelative about-section1"
-        id="about">
+        id="about"
+      >
         <div>
           <div class="sectioner-header text-center">
-            <h2 ><a href="./Pages/About.html">About Me</a></h2>
+            <h2><a href="./Pages/About.html">About Me</a></h2>
             <span class="line"></span>
           </div>
           <div class="about-content">
@@ -128,9 +135,10 @@
               class="profile-img about-section1--img"
             />
             <h1>Hi, I'm Mo the Traveler.</h1>
-            <h2 ><a href="./Pages/About.html">My Story</a></h2>
+            <h2><a href="./Pages/About.html">My Story</a></h2>
             <p class="about-text">
-              "Embrace the Unknown, Explore the Unseen, and Discover Your Journey."
+              "Embrace the Unknown, Explore the Unseen, and Discover Your
+              Journey."
             </p>
           </div>
         </div>
@@ -145,26 +153,28 @@
           </div>
           <div class="container pt-2">
             <div class="sec2-travel-video">
-              <a href="./Pages/travel.html"
-                ><video
+              <a href="./Pages/travel.html">
+                <video
                   id="sec2-travel-vid-tip1"
                   src="./Assets/Media/Prague.MP4"
                   autoplay
                   loop
                   muted
-                ></video
-              ></a>
+                ></video>
+              </a>
               <a id="sec2-travel-title-tip1" href="./Pages/travel.html">
                 <h1>Prague</h1>
               </a>
               <a id="sec2-travel-text-tip1" href="./Pages/travel.html">
                 <p>
-                  Where history whispers through every charming street corner. 🏰🇨🇿 #PragueMagic
+                  Where history whispers through every charming street corner.
+                  🏰🇨🇿 #PragueMagic
                 </p>
               </a>
               <a href="./Pages/travel.html"
                 ><video
                   id="sec2-travel-vid-tip2"
+                  class="sec2-travel-response2"
                   src="./Assets/Media/Venecia.MP4"
                   autoplay
                   loop
@@ -172,16 +182,17 @@
                 ></video
               ></a>
               <a id="sec2-travel-title-tip2" href="./Pages/travel.html">
-                <h1>Venice</h1>
+                <h1 class="sec2-travel-response2">Venice</h1>
               </a>
               <a id="sec2-travel-text-tip2" href="./Pages/travel.html">
-                <p>
+                <p class="sec2-travel-response2">
                   A timeless maze of canals and dreams. 🚣‍♂️✨ #VenetianSplendor
                 </p>
               </a>
               <a href="./Pages/travel.html"
                 ><video
                   id="sec2-travel-vid-tip3"
+                  class="sec2-travel-response3"
                   src="./Assets/Media/Italy2.MP4"
                   autoplay
                   loop
@@ -189,11 +200,13 @@
                 ></video
               ></a>
               <a id="sec2-travel-title-tip3" href="./Pages/travel.html">
-                <h1>Florencia</h1>
+                <h1 class="sec2-travel-response3">Florencia</h1>
               </a>
               <a id="sec2-travel-text-tip3" href="./Pages/travel.html">
-                <p>
-                  Florence, where art, history, and beauty converge! A city that steals your heart with every cobblestone street and Renaissance masterpiece. 🇮🇹❤️ #FlorenceMagic
+                <p class="sec2-travel-response3">
+                  Florence, where art, history, and beauty converge! A city that
+                  steals your heart with every cobblestone street and
+                  Renaissance masterpiece. 🇮🇹❤️ #FlorenceMagic
                 </p>
               </a>
             </div>
@@ -293,14 +306,16 @@
             class="carousel-control-prev"
             type="button"
             data-bs-target="#galleryC"
-            data-bs-slide="prev">
+            data-bs-slide="prev"
+          >
             <span class="carousel-control-prev-icon"></span>
           </button>
           <button
             class="carousel-control-next"
             type="button"
             data-bs-target="#galleryC"
-            data-bs-slide="next">
+            data-bs-slide="next"
+          >
             <span class="carousel-control-next-icon"></span>
           </button>
           <!-- Left and right controls -->
@@ -317,7 +332,14 @@
                 <h2><a href="./Pages/contact.html">Ask Me Anything!</a></h2>
                 <span class="line"></span>
                 <p>
-                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to <span><a href="mailto:motrav@gmail.com" data-action="email">motrav@email.com</a></span>
+                  Feel free to ask my any question about my travels, blog or if
+                  you have any business inquires. Fill out the form below or
+                  send me an email to
+                  <span
+                    ><a href="mailto:motrav@gmail.com" data-action="email"
+                      >motrav@email.com</a
+                    ></span
+                  >
                 </p>
               </div>
               <div class="section-content">
@@ -406,9 +428,7 @@
                         <div class="media-body">
                           <p class="text-uppercase">E-mail</p>
                           <p class="text-uppercase">
-                            <a
-                              class="text-white"
-                              href="mailto:motrav@gmail.com"
+                            <a class="text-white" href="mailto:motrav@gmail.com"
                               >motrav@email.com</a
                             >
                           </p>
@@ -439,20 +459,20 @@
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a
+            <a aria-label="Instagram"
               class="text-body-secondary"
               href="https://www.instagram.com/mercymolano?utm_source=qr"
               target="_blank"
             >
               <i class="fa-brands fa-instagram fa-beat"></i
             ></a>
-            <a
+            <a aria-label="Whatsapp"
               class="text-body-secondary"
               href="https://wa.link/ycoea4"
               target="_blank"
               ><i class="fa-brands fa-whatsapp fa-beat"></i
             ></a>
-            <a
+            <a aria-label="linkedin"
               class="text-body-secondary"
               href="https://co.linkedin.com/in/mercymoreno"
               target="_blank"
@@ -481,8 +501,8 @@
     <!--Scripts BS End-->
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <!-- scrollIt js -->
-    <script src="js/scrollIt.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/scrollit@1.0.5/scrollIt.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/wowjs@1.1.3/dist/wow.min.js"></script>
     <!--Scripts BS End-->
   </body>
 </html>
