fixinx resposive carrousel

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/Rest.webp" alt="Bogotá" />
+                <img class="carousel-img"  src="./Assets/Media/Rest.webp" alt="Bogotá" />
               </div>
             </div>
             <div class="carousel-item">
@@ -281,7 +281,7 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/monument.webp" alt="Bogotá" />
+                <img class="carousel-img"  src="./Assets/Media/monument.webp" alt="Bogotá" />
               </div>
             </div>
             <div class="carousel-item">
@@ -296,7 +296,7 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/fade.webp" alt="Bogotá" />
+                <img class="carousel-img"  src="./Assets/Media/fade.webp" alt="Bogotá" />
               </div>
             </div>
           </div>
