--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             />
           </a>
           <button
+            aria-label="Menu"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -225,37 +226,44 @@
           <!-- Dash Start -->
           <div class="carousel-indicators">
             <button
+              aria-label="Slide1"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="0"
               class="active"
             ></button>
             <button
+              aria-label="Slide2"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="1"
             ></button>
             <button
+              aria-label="Slide3"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="2"
             ></button>
             <button
+              aria-label="Slide4"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="3"
             ></button>
             <button
+              aria-label="Slide5"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="4"
             ></button>
             <button
+              aria-label="Slide6"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="5"
             ></button>
             <button
+              aria-label="Slide7"
               type="button"
               data-bs-target="#galleryC"
               data-bs-slide-to="6"
@@ -303,6 +311,7 @@
           <!-- carousel Images End-->
           <!-- Left and right controls -->
           <button
+            aria-label="Previous"
             class="carousel-control-prev"
             type="button"
             data-bs-target="#galleryC"
@@ -311,6 +320,7 @@
             <span class="carousel-control-prev-icon"></span>
           </button>
           <button
+            aria-label="Next"
             class="carousel-control-next"
             type="button"
             data-bs-target="#galleryC"
@@ -383,6 +393,7 @@
                       ></textarea>
                       <div class="wrapper">
                         <button
+                          aria-label="Submit"
                           class="btn-grad w-100 text-uppercase"
                           type="submit"
                           name="button"
