button accessible name

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -92,7 +92,7 @@
     <main class="body">
       <section class="about-section" id="hero">
         <div>
-          <img src="../Assets/Media/Mercy.webp" class="profile-img" />
+          <img src="../Assets/Media/Mercy.webp" alt="Mercy's-Memoji" class="profile-img" />
           <h1>I'm Mo.</h1>
           <p class="pb-3">
             Meet Mo, your friendly globetrotting companion, and join her on an exciting journey around the world. Mo is not just any traveler; she's a storyteller, adventurer, and explorer rolled into one. In this captivating adventure, Mo will take you on a voyage filled with intriguing tales, breathtaking landscapes, and cultural encounters that will leave you inspired and yearning for your own adventures.
