--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -59,6 +59,7 @@
             />
           </a>
           <button
+            aria-label="Menu"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -100,7 +101,9 @@
                 <h2>Ask Me Anything!</h2>
                 <span class="line"></span>
                 <p>
-                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to motrav@email.com
+                  Feel free to ask my any question about my travels, blog or if
+                  you have any business inquires. Fill out the form below or
+                  send me an email to motrav@email.com
                 </p>
               </div>
               <div class="section-content">
@@ -144,6 +147,7 @@
                       ></textarea>
                       <div class="wrapper">
                         <button
+                          aria-label="Submit"
                           class="btn-grad mt-6 w-100 text-uppercase"
                           type="submit"
                           name="button"
@@ -189,9 +193,7 @@
                         <div class="media-body">
                           <p class="text-uppercase">E-mail</p>
                           <p class="text-uppercase">
-                            <a
-                              class="text-white"
-                              href="mailto:motrav@gmail.com"
+                            <a class="text-white" href="mailto:motrav@gmail.com"
                               >motrav@gmail.com</a
                             >
                           </p>
@@ -221,20 +223,23 @@
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a aria-label="Instagram"
+            <a
+              aria-label="Instagram"
               class="text-body-secondary"
               href="https://www.instagram.com/mercymolano?utm_source=qr"
               target="_blank"
             >
               <i class="fa-brands fa-instagram fa-beat"></i
             ></a>
-            <a aria-label="Whatsapp"
+            <a
+              aria-label="Whatsapp"
               class="text-body-secondary"
               href="https://wa.link/ycoea4"
               target="_blank"
               ><i class="fa-brands fa-whatsapp fa-beat"></i
             ></a>
-            <a aria-label="linkedin"
+            <a
+              aria-label="linkedin"
               class="text-body-secondary"
               href="https://co.linkedin.com/in/mercymoreno"
               target="_blank"
