--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -55,6 +55,7 @@
             />
           </a>
           <button
+          aria-label="Menu"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -208,6 +209,7 @@
                     aria-describedby="button-search"
                   />
                   <button
+                  aria-label="Search"
                     class="btn btn-primary mb-3"
                     id="button-search"
                     type="button"
