--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="./Pages/About.html">MY STORY</a>
               </div>
               <div class="col-md-4 col-sm-12">
-                <img src="./Assets/Media/zen.webp" class="banner-img" />
+                <img alt="Pozos-Azules" src="./Assets/Media/zen.webp" class="banner-img" />
               </div>
             </div>
           </div>
@@ -132,6 +132,7 @@
           </div>
           <div class="about-content">
             <img
+            alt="Mercy's-memoji"
               src="./Assets/Media/Mercy.webp"
               class="profile-img about-section1--img"
             />
@@ -279,7 +280,11 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img class="carousel-img"  src="./Assets/Media/Rest.webp" alt="Bogotá" />
+                <img
+                  class="carousel-img"
+                  src="./Assets/Media/Rest.webp"
+                  alt="Bogotá"
+                />
               </div>
             </div>
             <div class="carousel-item">
@@ -289,7 +294,11 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img class="carousel-img"  src="./Assets/Media/monument.webp" alt="Bogotá" />
+                <img
+                  class="carousel-img"
+                  src="./Assets/Media/monument.webp"
+                  alt="Bogotá"
+                />
               </div>
             </div>
             <div class="carousel-item">
@@ -304,7 +313,11 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img class="carousel-img"  src="./Assets/Media/fade.webp" alt="Bogotá" />
+                <img
+                  class="carousel-img"
+                  src="./Assets/Media/fade.webp"
+                  alt="Bogotá"
+                />
               </div>
             </div>
           </div>
@@ -470,20 +483,23 @@
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a aria-label="Instagram"
+            <a
+              aria-label="Instagram"
               class="text-body-secondary"
               href="https://www.instagram.com/mercymolano?utm_source=qr"
               target="_blank"
             >
               <i class="fa-brands fa-instagram fa-beat"></i
             ></a>
-            <a aria-label="Whatsapp"
+            <a
+              aria-label="Whatsapp"
               class="text-body-secondary"
               href="https://wa.link/ycoea4"
               target="_blank"
               ><i class="fa-brands fa-whatsapp fa-beat"></i
             ></a>
-            <a aria-label="linkedin"
+            <a
+              aria-label="linkedin"
               class="text-body-secondary"
               href="https://co.linkedin.com/in/mercymoreno"
               target="_blank"
