--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -55,6 +55,7 @@
             />
           </a>
           <button
+            aria-label="Menu"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
