--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,6 +14,7 @@
     <title>Contact Me</title>
     <!-- Icon for title -->
     <link
+    alt="Logo"
       rel="shortcut icon"
       href="../Assets/Media/Mercy.webp"
       type="image/x-icon"
@@ -51,7 +52,7 @@
       <!--BS Navbar Start-->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
+          <a class="navbar-brand" alt="Landing-Page" href="../index.html">
             <img
               style="height: 50px"
               src="../Assets/Media/MerLogoB.webp"
@@ -72,19 +73,19 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" href="../index.html" alt="Landing-Page">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./About.html">About me</a>
+                <a class="nav-link" href="./About.html" alt="About-me">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./travel.html">Travel Tips</a>
+                <a class="nav-link" href="./travel.html" alt="Travel-tips">Travel Tips</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./gallery.html">Gallery</a>
+                <a class="nav-link" href="./gallery.html" alt="Gallery">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contacts</a>
+                <a class="nav-link" href="./contact.html" alt="Contact-me">Contacts</a>
               </li>
             </ul>
           </div>
