--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Mercy Mo</title>
     <!-- Icon for pages -->
     <link
+    alt="logo"
       rel="shortcut icon"
       href="./Assets/Media/Mercy.webp"
       type="image/x-icon"
@@ -49,7 +50,7 @@
       <!--BS Navbar Start will collapse below 1051-->
       <nav class="navbar navbar-expand-xl fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" alt="Landing-Page" href="#">
             <img
               style="height: 50px"
               src="./Assets/Media/MerLogoB.webp"
@@ -70,19 +71,19 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a alt="Landing-Page" class="nav-link" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/About.html">About me</a>
+                <a alt="About-me" class="nav-link" href="./Pages/About.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/travel.html">Travel Tips</a>
+                <a alt="Travel-tips" class="nav-link" href="./Pages/travel.html">Travel Tips</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/gallery.html">Gallery</a>
+                <a alt="Gallery" class="nav-link" href="./Pages/gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/contact.html">Contact me</a>
+                <a alt="Contact-me" class="nav-link" href="./Pages/contact.html">Contact me</a>
               </li>
             </ul>
           </div>
@@ -107,7 +108,7 @@
                   and cultural encounters that will leave you inspired and
                   yearning for your own adventures.
                 </p>
-                <a href="./Pages/About.html">MY STORY</a>
+                <a alt="About-me" href="./Pages/About.html">MY STORY</a>
               </div>
               <div class="col-md-4 col-sm-12">
                 <img alt="Pozos-Azules" src="./Assets/Media/zen.webp" class="banner-img" />
@@ -127,7 +128,7 @@
       >
         <div>
           <div class="sectioner-header text-center">
-            <h2><a href="./Pages/About.html">About Me</a></h2>
+            <h2><a alt="About-me" href="./Pages/About.html">About Me</a></h2>
             <span class="line"></span>
           </div>
           <div class="about-content">
@@ -137,7 +138,7 @@
               class="profile-img about-section1--img"
             />
             <h1>Hi, I'm Mo the Traveler.</h1>
-            <h2><a href="./Pages/About.html">My Story</a></h2>
+            <h2><a alt="About-me" href="./Pages/About.html">My Story</a></h2>
             <p class="about-text">
               "Embrace the Unknown, Explore the Unseen, and Discover Your
               Journey."
@@ -150,12 +151,12 @@
       <section class="travel prelative text-center" id="tips">
         <div class="section-padding video-overlay">
           <div class="sectioner-header text-center">
-            <h2 id="travel"><a href="./Pages/travel.html">Travel Tips</a></h2>
+            <h2 id="travel"><a alt="Travel-tips" href="./Pages/travel.html">Travel Tips</a></h2>
             <span class="line"></span>
           </div>
           <div class="container pt-2">
             <div class="sec2-travel-video">
-              <a href="./Pages/travel.html">
+              <a alt="Travel-tips" href="./Pages/travel.html">
                 <video
                   id="sec2-travel-vid-tip1"
                   src="./Assets/Media/Prague.MP4"
@@ -164,16 +165,16 @@
                   muted
                 ></video>
               </a>
-              <a id="sec2-travel-title-tip1" href="./Pages/travel.html">
+              <a id="sec2-travel-title-tip1" alt="Travel-tips" href="./Pages/travel.html">
                 <h1>Prague</h1>
               </a>
-              <a id="sec2-travel-text-tip1" href="./Pages/travel.html">
+              <a id="sec2-travel-text-tip1" alt="Travel-tips" href="./Pages/travel.html">
                 <p>
                   Where history whispers through every charming street corner.
                   🏰🇨🇿 #PragueMagic
                 </p>
               </a>
-              <a href="./Pages/travel.html"
+              <a alt="Travel-tips" href="./Pages/travel.html"
                 ><video
                   id="sec2-travel-vid-tip2"
                   class="sec2-travel-response2"
@@ -183,15 +184,15 @@
                   muted
                 ></video
               ></a>
-              <a id="sec2-travel-title-tip2" href="./Pages/travel.html">
+              <a id="sec2-travel-title-tip2" alt="Travel-tips" href="./Pages/travel.html">
                 <h1 class="sec2-travel-response2">Venice</h1>
               </a>
-              <a id="sec2-travel-text-tip2" href="./Pages/travel.html">
+              <a id="sec2-travel-text-tip2" alt="Travel-tips" href="./Pages/travel.html">
                 <p class="sec2-travel-response2">
                   A timeless maze of canals and dreams. 🚣‍♂️✨ #VenetianSplendor
                 </p>
               </a>
-              <a href="./Pages/travel.html"
+              <a alt="Travel-tips" href="./Pages/travel.html"
                 ><video
                   id="sec2-travel-vid-tip3"
                   class="sec2-travel-response3"
@@ -201,10 +202,10 @@
                   muted
                 ></video
               ></a>
-              <a id="sec2-travel-title-tip3" href="./Pages/travel.html">
+              <a id="sec2-travel-title-tip3" alt="Travel-tips" href="./Pages/travel.html">
                 <h1 class="sec2-travel-response3">Florencia</h1>
               </a>
-              <a id="sec2-travel-text-tip3" href="./Pages/travel.html">
+              <a id="sec2-travel-text-tip3" alt="Travel-tips" href="./Pages/travel.html">
                 <p class="sec2-travel-response3">
                   Florence, where art, history, and beauty converge! A city that
                   steals your heart with every cobblestone street and
@@ -219,7 +220,7 @@
       <!-------Gallery Start------->
       <section class="section-padding" id="gallery">
         <div class="sectioner-header text-center">
-          <h2><a href="./Pages/gallery.html">Gallery</a></h2>
+          <h2><a alt="Gallery" href="./Pages/gallery.html">Gallery</a></h2>
           <span class="line"></span>
         </div>
         <!-- Complete Carousel Start -->
@@ -352,7 +353,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sectioner-header text-center">
-                <h2><a href="./Pages/contact.html">Ask Me Anything!</a></h2>
+                <h2><a alt="Contact-me" href="./Pages/contact.html">Ask Me Anything!</a></h2>
                 <span class="line"></span>
                 <p>
                   Feel free to ask my any question about my travels, blog or if
